fix : overflow from the animation

--- a/src/sass/base/_layout.scss
+++ b/src/sass/base/_layout.scss
@@ -23,6 +23,7 @@ html {
   height: 100%;
   font-size: calc(1em * 0.625);
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -36,6 +37,7 @@ body {
   @include utils.clamp(font-size, 1.4, 1.8);
   @include utils.clamp(line-height, 1.4, 1.8);
   font-weight: 500; // Medium
+  overflow-x: hidden;
 
   &.active {
     overflow-y: hidden;
